--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cli",
     "mumu-page"
   ],
-  "author": "muwoo",
+  "author": "mumu",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
